# clearpath-simulator

./: README.md  installdep
environments/: CMakeLists.txt  package.xml
environments/Media/models/: CogniteOfficeMedium.dae  CogniteOfficeSmall.dae
environments/launch/: jackal_world.launch
environments/worlds/: cognite_office.world  scenario1.world
robots/jackal/: README.md
robots/jackal/jackal_broadcaster/: CMakeLists.txt  package.xml
robots/jackal/jackal_broadcaster/config/: jackal.yaml
robots/jackal/jackal_broadcaster/include/jackal_broadcaster/: jackal_broadcaster_node.hpp
robots/jackal/jackal_broadcaster/launch/: jackal_broadcaster.launch
robots/jackal/jackal_broadcaster/src/: jackal_broadcaster_node.cpp  jackal_tf2_broadcaster.cpp
robots/jackal/jackal_control/config/: control.yaml
robots/jackal/jackal_control/launch/: control.launch  teleop.launch
robots/jackal/jackal_description/: CMakeLists.txt  package.xml
robots/jackal/jackal_description/config/rviz/: image_and_lidar.rviz  robot_and_lidar.rviz
robots/jackal/jackal_description/launch/: description.launch  rviz.launch
robots/jackal/jackal_description/urdf/: accessories.urdf.xacro  actuators.xacro  jackal.urdf.xacro  materials.xacro  sensors.xacro
robots/jackal/jackal_description/urdf/sensors/: VLP-16.urdf.xacro
