<?xml version="1.0"?>
<package>
  <name>jackal_description</name>
  <version>0.6.3</version>
  <description>URDF robot description for Jackal</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <!-- Disabled temporarily due to metapackage issue. -->
  <!-- <run_depend>pointgrey_camera_description</run_depend> -->

  <export>
  </export>
</package>
